--- a/src/main/resources/templates/lista_profesores.html
+++ b/src/main/resources/templates/lista_profesores.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clientes</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     
     <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina -->
     <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
@@ -35,9 +38,6 @@
   <!--Navbar header-->
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded-bottom">
-      <a class="navbar-brand" href="#">
-      <h3>GestionBaradero</h3> 
-      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -45,7 +45,7 @@
         <ul class="navbar-nav">
           
           <li class="nav-item active">
-            <a class="nav-link" href="#"> <h5>Administracion de profesores</h1> <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#"> <h3>Administracion de profesores</h3> <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/admin/lista_clases"><h5>Administrar Clases</h5></a>
@@ -68,19 +68,8 @@
   </div>
 
   
-    <!--Barra de busqueda-->
-  <div class="container">
-    <form>
-        <div class="input-group">
-          <input type="text" class= "form-control" required placeholder="Buscar datos del profesor...">
-          <div class="input-group-append" id="button-addon4">
-            <input type="submit" value="Buscar" button class="btn btn-outline-secondary"/>
-            <input type="button" value="Limpiar" id="btnClear" button class="btn btn-outline-secondary"/>
-          </div>	
-        </div>	 	  	
-      </form>
-  </div>
-
+  <!--Barra de busqueda--> 	  	
+      
   <!--filtrar-->
   <div class="container">
     <div class="d-flex flex-row justify-content-center">
@@ -96,88 +85,98 @@
  
   <!--Tabla-->
   <div class="container-fluid">
-    <table class = "table-responsive table-bordered table-striped text-center">
-      <thead> 
-        <tr>
-          <th class="col-sm-1">DNI</th>
-          <th class="col-sm-1">NOMBRE</th>
-          <th class="col-sm-1">APELLIDO</th>
-          <th class="col-sm-1">TELEFONO</th>
-          <th class="col-sm-1">EMAIL</th> 
-          <th class="col-sm-2">ACCIONES</th>
-        </tr>
-  
-      </thead>
-  
-      <tbody>
-        <tr>
-          <th>2478309012 </th>
-          <td>Juan</td>
-          <td>Perez </td>
-          <td>23121221 </td>
-          <td>jperez@docentes.baradero.com</td>
-          <td>
-            <div class="d-flex align-items-stretch">
-              <div class="p-2">
-                <a class ="btn btn-warning"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar!
-                </a>
-              </div>
-              <div class="p-2">
-                <a  class = "btn btn-danger">
-                  <span class="fas fa-trash-alt"></span>Eliminar!
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-secondary">
-                  <span class="fas fa-eye"></span>Ver más
-                </a>
-              </div>
-            </div>          
-          </td>
-        
-        </tr>
-        <tr>
-          <th>24783031212</td>
-          <td>Natalia</th>
-          <td>Díaz </td>
-          <td>23121221 </td>
-          <td>ndiaz@docentes.baradero.com</td>
-          <td>
-            <div class="d-flex align-items-stretch">
-              <div class="p-2">
-                <a class ="btn btn-warning"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar!
-                </a>
-              </div>
-              <div class="p-2">
-                <a  class = "btn btn-danger">
-                  <span class="fas fa-trash-alt"></span>Eliminar!
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-secondary">
-                  <span class="fas fa-eye"></span>Ver más
-                </a>
-              </div>
-            </div>          
-          </td>
-        
-        </tr>
+    <div class="container">
+      <input class="form-control" id="busqueda_profesor" type="text" placeholder="Buscar datos de profesor..">   
+    </div>
+    <div class="pt-3">
+      <table class = "table-responsive table-bordered table-striped text-center">
+        <thead> 
+          <tr>
+            <th class="col-sm-1">DNI</th>
+            <th class="col-sm-1">NOMBRE</th>
+            <th class="col-sm-1">APELLIDO</th>
+            <th class="col-sm-1">TELEFONO</th>
+            <th class="col-sm-1">EMAIL</th> 
+            <th class="col-sm-3">ACCIONES</th>
+          </tr>
     
-      </tbody>
-  
-    </table>
-  </div>
-  
-
+        </thead>
+    
+        <tbody id="tabla_profesores">
+          <tr>
+            <th>2478309012 </th>
+            <td>Juan</td>
+            <td>Perez </td>
+            <td>23121221 </td>
+            <td>jperez@docentes.baradero.com</td>
+            <td>
+              <div class="d-flex align-items-stretch">
+                <div class="p-2">
+                  <a class ="btn btn-warning"> 
+                    <span class="fa fa-pencil fa-fw"></span>Editar!
+                  </a>
+                </div>
+                <div class="p-2">
+                  <a  class = "btn btn-danger">
+                    <span class="fas fa-trash-alt"></span>Eliminar!
+                  </a>
+                </div>
+                <div class="p-2">
+                  <a class = "btn btn-secondary">
+                    <span class="fas fa-eye"></span>Ver más
+                  </a>
+                </div>
+              </div>          
+            </td>
+          
+          </tr>
+          <tr>
+            <th>24783031212</td>
+            <td>Natalia</th>
+            <td>Díaz </td>
+            <td>23121221 </td>
+            <td>ndiaz@docentes.baradero.com</td>
+            <td>
+              <div class="d-flex align-items-stretch">
+                <div class="p-2">
+                  <a class ="btn btn-warning"> 
+                    <span class="fa fa-pencil fa-fw"></span>Editar!
+                  </a>
+                </div>
+                <div class="p-2">
+                  <a  class = "btn btn-danger">
+                    <span class="fas fa-trash-alt"></span>Eliminar!
+                  </a>
+                </div>
+                <div class="p-2">
+                  <a class = "btn btn-secondary">
+                    <span class="fas fa-eye"></span>Ver más
+                  </a>
+                </div>
+              </div>          
+            </td>
+          
+          </tr>
       
+        </tbody>
     
- 
+      </table>
+    </div>
+  </div>
+  <script>
+  $(document).ready(function(){
+  $("#busqueda_profesor").on("keyup", function() {
+    var value = $(this).val().toLowerCase();
+    $("#tabla_profesores tr").filter(function() {
+      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+      });
+    });
+  });
+  </script>
   
   <!--footer-->
   <footer class="footer mt-3">
-    <div class="container-fluid">
+    <div class="container-fluid pt-3">
       <div class="row">
         <div class="col-md-12 text-right bg-dark text-center text-white">
           <div class="text-white "></div>
@@ -189,7 +188,7 @@
     
   <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  <script src="funciones.js"></script>
+  
   
       
     
