--- a/src/main/resources/templates/lista_profesores.html
+++ b/src/main/resources/templates/lista_profesores.html
@@ -66,128 +66,68 @@
             <div class=form-group><input type="text" placeholder="Buscar..." class="form-control" id="fecha"></div>
           </div>
           <div class="p-2"><button type="submit" class= "btn btn-secondary">Consultar asistencias</button></div>
-          <div class="p-2"><button class="btn btn-primary btn-lg">Nueva clase</button></div>
+          <div class="p-2"><a class="btn btn-primary btn-lg" href="/admin/lista_profesores/nuevo">Nueva clase</a></div>
         </div>
     </div>
   </div>
   
   <div class="container">
     <table class="table table-striped table-bordered table-responsive tabla_profesores">
-      <thead>
-        <th>Nombre</th>
-        <th>Apellido</th>
-        <th>Telefono</th>
-        <th>Email</th>
-        <th class="col-sm-3">Acciones</th>
-        
+      <thead> 
+        <tr>
+          <th class="col-sm-1">Nombre</th>
+          <th class="col-sm-1">Apellido</th>
+          <th class="col-sm-1">Telefono</th>
+          <th class="col-sm-1">Dni</th>
+          <th class="col-sm-3">Acciones</th>
+        </tr>
+
       </thead>
-      <tbody>
-        <tr>
-          <td>Juan</td>
-          <td>Gomez</td>
-          <td>2342221</td>
-          <td>jg@docentes.com</td>
-          <td>
-            <div class="d-flex align-items-stretch">
-              <div class="p-2">
-                <a class ="btn btn-warning"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar
-                </a>
-              </div>
-              <div class="p-2">
-                <a  class = "btn btn-danger"  onclick="eliminarProfesor()">
-                  <span class="fas fa-trash-alt"></span>Eliminar
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-secondary">
-                  <span class="fas fa-eye"></span>Más
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-info">
-                  <span class="fas fa-user"></span>Clases
-                </a>
-              </div>
-            </div>          
-          </td>
-        </tr>
-        <tr>
-          <td>Natalia</td>
-          <td>Diaz</td>
-          <td>2342221</td>
-          <td>nd@docentes.com</td>
-          
-          <td>
-            <div class="d-flex align-items-stretch">
-              <div class="p-2">
-                <a class ="btn btn-warning"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar
-                </a>
-              </div>
-              <div class="p-2">
-                <a  class = "btn btn-danger"  onclick="eliminarProfesor()">
-                  <span class="fas fa-trash-alt"></span>Eliminar
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-secondary">
-                  <span class="fas fa-eye"></span>Más
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-info">
-                  <span class="fas fa-user"></span>Clases
-                </a>
-              </div>
-            </div>          
-          </td>
-        </tr>
-        <tr>
-          <td>Juan</td>
-          <td>Perez</td>
-          <td>2342221</td>
-          <td>jp@docentes.com</td>
-          
-          <td>
-            <div class="d-flex align-items-stretch">
-              <div class="p-2">
-                <a class ="btn btn-warning"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar
-                </a>
-              </div>
-              <div class="p-2">
-                <a  class = "btn btn-danger" onclick="eliminarProfesor()">
-                  <span class="fas fa-trash-alt"></span>Eliminar
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-secondary">
-                  <span class="fas fa-eye"></span>Más
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-info">
-                  <span class="fas fa-user"></span>Clases
-                </a>
-              </div>
-            </div>          
-          </td>
-        </tr>
   
+      <tbody>
+        <tr  th:each = "profesor:${profesores}">
+          <th  th:text="${profesor.nombreProf}">	</th>
+          <td  th:text="${profesor.apellidoProf}"> </td>
+          <td  th:text="${profesor.telefonoProf}"> </td>
+          <td  th:text="${profesor.dniProf}"></td>
+          <td>
+          	<div class="d-flex align-items-stretch">
+              <div class="p-2">
+                <a class ="btn btn-warning" th:href="@{/admin/editar_profesor/}+${profesor.idProf}"> 
+                  <span class="fa fa-pencil fa-fw"></span>Editar
+                </a>
+              </div>
+              <div class="p-2">
+                <a  class = "btn btn-danger"  th:onclick="eliminarprofesor([[${profesor.idProf}]])">
+                  <span class="fas fa-trash-alt"></span>Eliminar
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-secondary">
+                  <span class="fas fa-eye"></span>Más
+                </a>
+              </div>
+              <div class="p-2">
+                <a class = "btn btn-info">
+                  <span class="fas fa-user"></span>Clases
+                </a>
+              </div>
+            </div>          
+
+          </td>
+        </tr>   
       </tbody>
       
     </table>
-
   </div>
+
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>    
   <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <script src="https://cdn.datatables.net/plug-ins/1.10.21/i18n/Spanish.json"></script>
-
-  <script>
+   <script>
     $('.tabla_profesores').DataTable({
       "language": {
         "sProcessing":     "Procesando...",
@@ -223,5 +163,6 @@
   } );
     
   </script>
+
 </body>
 </html>
