--- a/src/main/resources/templates/lista_clases.html
+++ b/src/main/resources/templates/lista_clases.html
@@ -73,63 +73,35 @@
             <div class=form-group><input type="text" placeholder="Buscar..." class="form-control" id="fecha"></div>
           </div>
           <div class="p-2"><button type="submit" class= "btn btn-secondary">Clases en esta fecha</button></div>
-          <div class="p-2"><button class="btn btn-primary btn-lg">Nueva clase</button></div>
+          <div class="p-2"><a class="btn btn-primary btn-lg" href="/admin/lista_clases/nuevo">Nueva clase</a></div>
         </div>
     </div>
   </div>
   
-  <div class="container mb-3 mt-3">
-    <table class="table table-striped table-bordered table-responsive dat">
-      <thead>
+  <div class="container">
+    <table class="table table-striped table-bordered table-responsive tabla_clases">
+      <thead> 
         <tr>
-          <th class="th-sm">Nombre</th>
-          <th class="th-sm">Deporte</th>
-          <th class="th-sm">Profesores</th>
-          <th class="th-sm">Alumnos</th>
-          <th class="th-sm">Acciones</th>
+          <th class="col-sm-1">Nombre</th>
+          <th class="col-sm-1">Deporte</th>
+          <th class="col-sm-3">Acciones</th>
         </tr>
-      
+
       </thead>
+  
       <tbody>
-        <tr>
-          <td>Futbol juvenil</td>
-          <td>Futbol</td>
-          <td>Juan Perez</td>
-          <td>32/40</td>
+        <tr  th:each = "clase:${clases}">
+          <th  th:text="${clase.nombreDep}">	</th>
+          <td  th:text="${clase.deporte}"> </td>
           <td>
             <div class="d-flex align-items-stretch">
               <div class="p-2">
-                <a class ="btn btn-warning"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar
-                </a>
-              </div>
-              <div class="p-2">
-                <a  class = "btn btn-danger" onclick="eliminarclase()">
-                  <span class="fas fa-trash-alt"></span>Eliminar
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-secondary">
-                  <span class="fas fa-clock"></span>Horarios
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-info">
-                  <span class="fas fa-book"></span>Asistencia
-                </a>
-              </div>
-            </div>          
-          </td>
-          <!--
-            <td>
-            <div class="d-flex align-items-stretch">
-              <div class="p-2">
-                <a class ="btn btn-warning"> 
+                <a class ="btn btn-warning" th:href="@{/admin/editar_clase/}+${clase.idClase}">
                   <span class="fa fa-pencil fa-fw"></span>Editar!
                 </a>
               </div>
               <div class="p-2">
-                <a  class = "btn btn-danger">
+                <a  class = "btn btn-danger"  th:onclick="eliminarclase([[${clase.idClase}]])">
                   <span class="fas fa-trash-alt"></span>Eliminar!
                 </a>
               </div>
@@ -143,80 +115,14 @@
                   <span class="fas fa-book"></span>Asistencia
                 </a>
               </div>
-            </div>          
+            </div>   
           </td>
-          -->
-          
-        </tr>
-        <tr>
-          <td>Futbol adultos</td>
-          <td>Futbol</td>
-          <td>Juan Perez</td>
-          <td>32/40</td>
-          <td>
-            <div class="d-flex align-items-stretch">
-              <div class="p-2">
-                <a class ="btn btn-warning"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar
-                </a>
-              </div>
-              <div class="p-2">
-                <a  class = "btn btn-danger" onclick="eliminarclase()">
-                  <span class="fas fa-trash-alt"></span>Eliminar
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-secondary">
-                  <span class="fas fa-clock"></span>Horarios
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-info">
-                  <span class="fas fa-book"></span>Asistencia
-                </a>
-              </div>
-            </div>          
-          </td>
-        </tr>
-        <tr>
-          <td>Handball femenino</td>
-          <td>Handball</td>
-          <td>Juan Perez</td>
-          <td>15/40</td>
-          <td>
-            <div class="d-flex align-items-stretch">
-              <div class="p-2">
-                <a class ="btn btn-warning"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar
-                </a>
-              </div>
-              <div class="p-2">
-                <a  class = "btn btn-danger" onclick="eliminarclase()">
-                  <span class="fas fa-trash-alt" ></span>Eliminar
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-secondary">
-                  <span class="fas fa-clock"></span>Horarios
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-info">
-                  <span class="fas fa-book"></span>Asistencia
-                </a>
-              </div>
-            </div>          
-          </td>
-          
-        </tr>
-  
+        </tr>   
       </tbody>
       
     </table>
-
   </div>
-   
-  
+      
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>    
   <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
@@ -226,7 +132,7 @@
   
 
   <script>
-    $('.dat').DataTable({
+    $('.tabla_clases').DataTable({
       "language": {
         "sProcessing":     "Procesando...",
         "sLengthMenu":     "Mostrar _MENU_ registros",
