--- a/src/main/resources/templates/asistencia.html
+++ b/src/main/resources/templates/asistencia.html
@@ -33,11 +33,9 @@
         <ul class="navbar-nav">
           
           <li class="nav-item active">
-            <a class="nav-link" href="#"> <h3>Administracion de profesores</h3> <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#"> <h3>Administrar asistencia</h3> <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/lista_clases"><h5>Administrar Clases</h5></a>
-          </li>
+         
         </ul>
         
         <ul class="navbar-nav ml-md-auto">
@@ -59,32 +57,56 @@
   <!--Barra de busqueda--> 	  	
       
   <!--filtrar-->
-  <div class="container">
-    <div class="d-flex flex-row justify-content-center">
-        <div class="row">
-          <div class="p-2">
-            <div class=form-group><input type="text" placeholder="Buscar..." class="form-control" id="fecha"></div>
-          </div>
-          <div class="p-2"><button type="submit" class= "btn btn-secondary">Consultar asistencias</button></div>
-          <div class="p-2"><a class="btn btn-primary btn-lg" href="/admin/lista_profesores/nuevo">Nuevo Profesor</a></div>
-        </div>
-    </div>
-  </div>
+  
   
   <div class="container">
     <table class="table table-striped table-bordered table-responsive tabla_profesores">
       <thead> 
         <tr>
-          <th class="col-sm-1">Nombre</th>
-          <th class="col-sm-1">Apellido</th>
-          <th class="col-sm-1">Telefono</th>
-          <th class="col-sm-1">Dni</th>
-          <th class="col-sm-3">Acciones</th>
+          <th class="col-sm-1">Clase</th>
+          <th class="col-sm-1">Profesor a cargo</th>
+          <th class="col-sm-1">Dia</th>
+          <th class="col-sm-1">Horario</th>
+          <th class="col-sm-3">Marcar asistencia</th>
         </tr>
 
       </thead>
-  
+      
+  	
       <tbody>
+         <tr>
+          <td>Futbol Femenino</td>
+          <td>Juan Perez </td>
+          <td>28/11/2020</td>
+          <td>14:00hs</td>
+          <td>
+            <div class="d-flex align-items-stretch">
+              <div class="p-2">
+                <a class ="btn btn-warning"> 
+                  <span class="fa fa-pencil fa-fw"></span>Editar asistencia
+                </a>
+              </div>
+             </div>
+                     
+          </td>
+        </tr>
+         <tr>
+          <td>Futbol Masculino</td>
+          <td>Juan Perez </td>
+          <td>30/11/2020</td>
+          <td>16:00hs</td>
+          <td>
+            <div class="d-flex align-items-stretch">
+              <div class="p-2">
+                <a class ="btn btn-warning"> 
+                  <span class="fa fa-pencil fa-fw"></span>Editar asistencia
+                </a>
+              </div>
+             </div>
+                     
+          </td>
+        </tr>
+      
         <tr  th:each = "profesor:${profesores}">
           <th  th:text="${profesor.nombreProf}">	</th>
           <td  th:text="${profesor.apellidoProf}"> </td>
@@ -94,22 +116,7 @@
           	<div class="d-flex align-items-stretch">
               <div class="p-2">
                 <a class ="btn btn-warning" th:href="@{/admin/editar_profesor/}+${profesor.idProf}"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar
-                </a>
-              </div>
-              <div class="p-2">
-                <a  class = "btn btn-danger"  th:onclick="eliminarprofesor([[${profesor.idProf}]])">
-                  <span class="fas fa-trash-alt"></span>Eliminar
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-secondary">
-                  <span class="fas fa-eye"></span>Más
-                </a>
-              </div>
-              <div class="p-2">
-                <a class = "btn btn-info">
-                  <span class="fas fa-user"></span>Clases
+                  <span class="fa fa-pencil fa-fw"></span>Modificar asistencia
                 </a>
               </div>
             </div>          
@@ -138,7 +145,7 @@
         "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
         "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
         "sInfoPostFix":    "",
-        "sSearch":         "Buscar profesor:",
+        "sSearch":         "Buscar clase:",
         "sUrl":            "",
         "sInfoThousands":  ",",
         "sLoadingRecords": "Cargando...",
