--- a/src/main/resources/templates/form_profesor.html
+++ b/src/main/resources/templates/form_profesor.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="form-group">
                         <label for="matricula">Matricula</label>
-                        <input th:field="*{matriculaProf}" type="number" class="form-control"/>
+                        <input th:field="*{matriculaProf}" type="text" class="form-control"/>
                     </div>
                     <div class="form-group">
                         <label for="fechaNacimiento">Fecha de nacimiento</label>
