--- a/src/main/resources/templates/lista_profesores_completa.html
+++ b/src/main/resources/templates/lista_profesores_completa.html
@@ -33,7 +33,7 @@
         <ul class="navbar-nav">
           
           <li class="nav-item active">
-            <a class="nav-link" href="#"> <h3>Administracion de profesores</h3> <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/admin/lista_profesores"> <h3>Administracion de profesores</h3> <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/admin/lista_clases"><h5>Administrar Clases</h5></a>
@@ -104,11 +104,7 @@
                 </a>
               </div>
               
-              <div class="p-2">
-                <a class = "btn btn-info">
-                  <span class="fas fa-user"></span>Clases
-                </a>
-              </div>
+              
             </div>          
 
           </td>
