--- a/src/main/resources/templates/logedin_profesor_clase.html
+++ b/src/main/resources/templates/logedin_profesor_clase.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Clases del profesor</title>
+    <title>Mis asistencias</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
@@ -16,8 +16,7 @@
     <script src="https://kit.fontawesome.com/76bcb4e810.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="/funciones.js"></script>
-    <script src="/showSelector.js"></script>
-        <script src="/showSelector.js"></script>
+    <script src="/js/showSelector.js"></script>
 
 
     <!--tablas-->
@@ -30,20 +29,104 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>   
 </head>
 <body>
-    <table class="table table-stripped table-responsive">
-        <thead>
-            <tr>
-                <td>Nombre de la clase</td>
-                <td>Deporte a practicar</td>
-                <td>Acciones</td>
-            </tr>
-            <tr th:each=" clase : ${clases}">
-                <td th:text="${clase.idClase}"></td>
-                <td th:Text="${clase.nombreDep}"></td>
-                <td>a</td>
-            </tr>
-        </thead>
-    </table>
+    <div class="container-fluid">
+        
+        <div class="d-flex">
+            <div class="p-2 mr-auto">
+                <img src="static/img/deportes.png" th:src="@{/img/deportes.png}" alt="Inicio" width="120" height="120" />
+            </div>
+            <div class="p-2">
+              <img src="static/img/escudo.png" width="100" height="100"  th:src="@{/img/escudo.png}" alt="deportes" />
+            </div>
+        </div>
+
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded-bottom">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                
+                <li class="nav-item active">
+                    <a class="nav-link" href="#"> <h3>Sistema de Gestión</h3> <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/profesor/lista_clases"><h5>Mis clases</h5></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/profesor/lista_clases"><h5>Mis horarios</h5></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/profesor/lista_clases"><h5>Mis Asistencias</h5></a>
+                </li>
+                </ul>
+                
+            </div>
+            </nav>
+        </div>
+        
+        <div class="container pt-3">
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <h1 th:text=" 'Bienvenido, ' + ${profesor.nombreProf} + ' ' + ${profesor.apellidoProf}"  ></h1>
+                </div>
+            </div>
+            <button class="btn btn-primary" onclick="mostrar('x')">Registrar asistencias</button>
+        </div> 
+       
+        <div class="container pt-3">
+            <table class="table table-striped table-bordered table-responsive" style="display:none" id="x">
+                <thead>                
+                    <tr>
+                        <td class="col-2">Nombre de la clase</td>
+                        <td class="col-2">Lugares de practica</td>
+                        <td class="col-2">Dias de la semana</td>
+                        <td class="col-2">Deporte a practicar</td>
+                        <td class="col-2">Dias de la semana</td>
+                        <td class="col-2">Acciones</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    
+                        <tr th:each=" clase : ${clases}">
+                        <td th:text="${clase.deporte}"></td>
+                        <td th:text="${clase.nombreDep}"></td>
+                        <th:block th:each=" horario : ${clase.horarios} ">
+                            <td>
+                                <span><h1 th:text=" ${horario.lugar}"></h1></span>
+                            </td>
+                        </th:block>
+                        
+                        <td>
+                            <div class="d-flex align-items-stretch">
+                                <div class="p-2">
+                                <a class ="btn btn-success" th:href="@{/profesor/registar_asistencia/} + ${clase.idClase}" data-toggle="tooltip" data-placement="top" title="Registrar asistencia"> 
+                                    <span class="fas fa-plus"></span>
+                                </a>
+                                </div>
+                                <div class="p-2">
+                                    <a class ="btn btn-info" th:href="@{/profesor/consultar_horarios/} + ${clase.idClase}" data-toggle="tooltip" data-placement="top" title="Consultar horarios">
+                                        <span class="fas fa-clock"></span>
+                                    </a>
+                                </div>
+                            </div>          
+                        </td>
+                    </tr>
+
+                     
+                   
+                    
+                </tbody> 
+               
+            </table>
+            
+        </div>
+        
+    </div>
+    
+    
+    
     
 </body>
 </html>
